# Skirk

./: .gitignore  CHANGELOG.md  Makefile  README.md  go.mod  pyproject.toml
.github/workflows/: ci.yml  release.yml
clients/android/: README.md
clients/android/app/: build.gradle.kts
clients/desktop/: README.md  package-lock.json  package.json
clients/desktop/src/: App.tsx  styles.css
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/src/: lib.rs
cloudrun_probe/: Dockerfile  README.md  app.py  requirements.txt
cmd/skirk/: main.go  main_test.go  parent_watch_android.go  setup.go  setup_test.go
docs/: architecture.md  drive-mux-v5.md  go_skirk.md  setup.md  skirk_drive_sheets_architecture.md  skirk_modes.md  throughput_2026_05_01.md  verification_2026_05_01.md
examples/: skirk.config.example.json
internal/skirk/: config.go  config_test.go  drive.go  drive_test.go  httpclient.go  httpclient_test.go  hybrid.go  hybrid_test.go  memory.go  mux.go  muxv5.go  protocol.go  protocol_test.go  sheets.go  socksdial.go  socksdial_test.go  socksserver.go  store.go  tunnel.go  tunnel_test.go  workspace.go
skirk/: __init__.py  blobq.py  cli.py  curl.py  factory.py  hybrid.py  modes.py  protocol.py
skirk/templates/app_engine/: app.yaml  main.py
skirk/transports/: __init__.py  base.py  drive.py  gcs.py  local.py  sheets.py
tests/: test_blobq_local.py  test_hybrid_local.py  test_protocol.py
tools/: google_api_path_probe.py  google_substrate_probe.py  skirk_probe.py  skirk_transport_bench.py  storage_throughput_probe.py
(+13 files in other folders)
