[project]
name = "skirk"
version = "0.1.0"
description = "Selectable Skirk transport prototypes for restricted Google-reachable networks."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=45.0.0",
]

[project.scripts]
skirk = "skirk.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
