[package]
name = "skirk-desktop"
version = "0.1.41"
description = "Skirk portable desktop client"
edition = "2021"

[lib]
name = "skirk_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "skirk-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.4", features = [] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Networking_WinInet", "Win32_Security", "Win32_System_Threading"] }
winreg = "0.55"
